test/expected/explain_prri.out
explain int &&*x
              ^
15: error: pointer to rvalue reference is illegal; did you mean "*&"?
